Revamp calendar views and task editor

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,26 +4,29 @@
     <string name="mode_day">День</string>
     <string name="mode_week">Неделя</string>
     <string name="mode_month">Месяц</string>
-    <string name="empty_slot_hint">Свободное время — нажмите, чтобы добавить задачу</string>
+    <string name="free_time_title">Свободное время</string>
+    <string name="free_time_range">%1$s — %2$s</string>
+    <string name="free_time_until_end">до конца дня</string>
+    <string name="free_time_add">Добавить задачу</string>
     <string name="more_tasks">Ещё %1$d…</string>
     <string name="new_task">Новая задача</string>
     <string name="edit_task">Редактирование задачи</string>
     <string name="save">Сохранить</string>
-    <string name="cancel">Отмена</string>
     <string name="field_title">Название</string>
     <string name="field_description">Описание</string>
     <string name="field_start">Начало</string>
     <string name="field_end">Окончание</string>
     <string name="field_date">Дата</string>
     <string name="field_important">Важная задача</string>
-    <string name="field_parent">Родительская активность</string>
-    <string name="no_parent">Без родителя</string>
     <string name="type_point">Точка</string>
     <string name="type_interval">Интервал</string>
     <string name="error_time_required">Укажите время начала в формате ЧЧ:ММ</string>
     <string name="error_end_required">Интервал требует окончания</string>
     <string name="error_title_required">Название обязательно</string>
     <string name="error_date_required">Укажите дату в формате ГГГГ-ММ-ДД</string>
+    <string name="auto_parent_hint">Родительская активность определяется автоматически по выбранному времени.</string>
+    <string name="auto_parent_label">Родитель: %1$s</string>
+    <string name="auto_parent_none">Без родителя</string>
     <string name="nav_calendar">Календарь</string>
     <string name="nav_statistics">Статистика</string>
     <string name="nav_settings">Настройки</string>
