--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,15 +15,15 @@
     <string name="edit_task">Редактирование задачи</string>
     <string name="save">Сохранить</string>
     <string name="dialog_delete_title">Удалить задачу?</string>
-    <string name="dialog_delete_message">Действительно удалить задачу "%1$s"?</string>
+    <string name="dialog_delete_message">Вы действительно хотите удалить задачу?</string>
     <string name="field_title">Название</string>
     <string name="field_description">Описание</string>
     <string name="field_start">Начало</string>
     <string name="field_end">Окончание</string>
     <string name="field_date">Дата</string>
     <string name="field_important">Важная задача</string>
-    <string name="type_point">Точка</string>
-    <string name="type_interval">Интервал</string>
+    <string name="type_point">Разовая</string>
+    <string name="type_interval">Длительная</string>
     <string name="error_time_required">Укажите время начала в формате ЧЧ:ММ</string>
     <string name="error_end_required">Интервал требует окончания</string>
     <string name="error_title_required">Название обязательно</string>
