--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,9 @@
     <string name="field_start">Начало</string>
     <string name="field_end">Окончание</string>
     <string name="field_date">Дата</string>
-    <string name="field_important">Важная задача</string>
+    <string name="field_important">Важность</string>
+    <string name="task_status_regular">Обычная задача</string>
+    <string name="task_status_important">Важная задача</string>
     <string name="type_point">Разовая</string>
     <string name="type_interval">Длительная</string>
     <string name="error_time_required">Укажите время начала в формате ЧЧ:ММ</string>
