Revert "Add reminders, recurrence, and polish task editor"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Testplanner</string>
     <string name="today">Сегодня</string>
-    <string name="go_to_today">Вернуться на сегодняшнюю дату</string>
+    <string name="go_to_today">Перейти на сегодняшнюю дату</string>
     <string name="mode_day">День</string>
     <string name="mode_week">Неделя</string>
     <string name="mode_month">Месяц</string>
@@ -30,33 +30,6 @@
     <string name="field_end">Окончание</string>
     <string name="field_date">Дата</string>
     <string name="field_important">Важность</string>
-    <string name="reminder_title">Напоминание</string>
-    <string name="reminder_none">Без напоминания</string>
-    <string name="reminder_unavailable">Недоступно для выбранного времени</string>
-    <string name="reminder_dialog_title">Напоминание</string>
-    <string name="reminder_dialog_message">Выберите, за сколько времени до начала напомнить (минимум 5 минут)</string>
-    <string name="reminder_remove">Удалить напоминание</string>
-    <string name="reminder_error_range">Напоминание должно быть не позже чем за %d минут до начала</string>
-    <string name="reminder_error_min">Напоминание должно быть минимум за 5 минут до начала</string>
-    <string name="reminder_summary_minutes">За %d мин</string>
-    <string name="reminder_summary_hours">За %d ч</string>
-    <string name="reminder_summary_hours_minutes">За %1$d ч %2$d мин</string>
-    <string name="reminder_hours_label">Часы</string>
-    <string name="reminder_minutes_label">Минуты</string>
-    <string name="repeat_title">Повтор</string>
-    <string name="repeat_none">Без повтора</string>
-    <string name="repeat_every_day">Каждый день</string>
-    <string name="repeat_weekdays">По будням</string>
-    <string name="repeat_every_week">Каждую неделю</string>
-    <string name="repeat_every_two_weeks">Каждые 2 недели</string>
-    <string name="repeat_every_three_weeks">Каждые 3 недели</string>
-    <string name="repeat_every_month">Каждый месяц</string>
-    <string name="repeat_every_year">Каждый год</string>
-    <string name="repeat_flexible">Гибкий график</string>
-    <string name="repeat_flexible_summary">Гибкий график — каждые %d дней</string>
-    <string name="repeat_dialog_title">Повтор</string>
-    <string name="repeat_flexible_label">Интервал (дней)</string>
-    <string name="repeat_flexible_error">Интервал должен быть от 1 до 365</string>
     <string name="task_status_regular">Обычная задача</string>
     <string name="task_status_important">Важная задача</string>
     <string name="type_point">Разовая</string>
