feat: redesign day planner timeline

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,18 @@
     <string name="free_time_until_end">до конца дня</string>
     <string name="free_time_add">Добавить задачу</string>
     <string name="free_day_message">Весь день свободен</string>
+    <string name="timeline_now">Сейчас</string>
+    <string name="timeline_quick_add">Добавить задачу в выбранное время</string>
+    <string name="timeline_zoom_in">Увеличить масштаб</string>
+    <string name="timeline_zoom_out">Уменьшить масштаб</string>
+    <string name="timeline_zoom_level_24h">24 часа</string>
+    <string name="timeline_zoom_level_12h">12 часов</string>
+    <string name="timeline_zoom_level_6h">6 часов</string>
+    <string name="timeline_zoom_level_3h">3 часа</string>
+    <string name="timeline_zoom_level_1h">1 час</string>
+    <string name="timeline_zoom_level_30m">30 минут</string>
+    <string name="timeline_zoom_level_10m">10 минут</string>
+    <string name="timeline_zoom_level_1m">1 минута</string>
     <string name="more_tasks">Ещё %1$d…</string>
     <string name="new_task">Новая задача</string>
     <string name="edit_task">Редактирование задачи</string>
